imagenes con referencias

--- a/sectores/alimentos-bebidas/index.html
+++ b/sectores/alimentos-bebidas/index.html
@@ -104,51 +104,51 @@
                 <tr>
                   <td>
                     Superficies asépticas. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115" alt="aseptico">
                   </td>
                   <td>
                     Resistente a químicos de limpieza. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="115" height="115"> 
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="115" height="115"alt="limpieza"> 
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Superficie Resistente al Moho.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115"alt="moho">
                   </td>
                   <td>
                     Excelentes propiedades térmicas y reflectividad lumínica. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/reflection.svg" width="115" height="115"alt="aislante">
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Excelente acabado. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115"alt="excelente acabado">
                   </td>
                   <td>
                     Aislante acústico. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115"alt="aislamiento termico">
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Bajo costo de mantenimiento.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115" alt="conford">
                   </td>
                   <td>
                     Ignífugo y autoextinguidle. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115" alt="ignifugo autoextinguible">
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Norma Sismo-resistente.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115" alt="sismo resistente">
                   </td>
                   <td>
                     Código Sanitario. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo sanitario">
                   </td>
                 </tr>
             </table>
