--- a/sectores/construccion/index.html
+++ b/sectores/construccion/index.html
@@ -105,66 +105,66 @@
               <tr>
                 <td>
                   Durabilidad y resistencia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115"alt="casas resistentes">
                 </td>
                 <td>
                   Excelente acabado. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115"> 
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente acabado" > 
                 </td>
               </tr>
               <tr>
                 <td>
                   Aislante térmico y acústico.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislamiento termico">
                 </td>
                 <td>
                   Rapidez de construcción. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115"alt="construcciones rapidas">
                 </td>
               </tr>
               <tr>
                 <td>
                   Bajo costo de mantenimiento. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"alt="bajo mantenimiento">
                 </td>
                 <td>
                   No requiere acabados. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115" alt="no acabados">
                 </td>
               </tr>
               <tr>
                 <td>
                   Construcción limpia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115"alt="construccion limpia">
                 </td>
                 <td>
                   Fabricación a la medida disminuyendo desperdicios. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/ruler.svg" width="115" height="115" alt="cero desperdicions">
                 </td>
               </tr>
               <tr>
                 <td>
                   Desmontable - reutilizable.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115" alt="reutilizable">
                 </td>
                 <td>
                   Ignífugo y autoextinguidle. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115" alt="ignifugo autoextinguible">
                 </td>
               </tr>
               <tr>
                 <td>
                   Liviano y transportable.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115" alt="casas prefabricadas">
                 </td>
                 <td>
                   Norma Sismo-resistente. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115"alt="sismo resistente">
                 </td>
               </tr>
               <th colspan="2">
                 Código Sanitario. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo sanitario">
               </th>
           </table>
            
