--- a/experiencias/experiencia-2.html
+++ b/experiencias/experiencia-2.html
@@ -24,7 +24,7 @@
   <!--Bootstrap para cards-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <!--Bootstrap para cards-->
@@ -63,15 +63,26 @@
               <a class="dropdown-item" href="../sectores/plantaciones-ganaderia/index.html">Plantaciones y ganaderia</a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../soluciones/index.html">Soluciones</a>
-          </li>
+        <!-- ---------------------------------------------- -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="../soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+            <a class="dropdown-item" href="../soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+            <a class="dropdown-item" href="../soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
+          </div>
+        </li>
+
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="soluciones/index.html">Soluciones</a>
+        </li> -->
+        <!-- ---------------------------------------------- -->
           <li class="nav-item">
             <a class="nav-link" href="index.html">Experiencias</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="../noticias/index.html">Noticias</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="../destacados/index.html">Destacados</a>
           </li>
