--- a/experiencias/experiencia-2.html
+++ b/experiencias/experiencia-2.html
@@ -164,41 +164,32 @@
 
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a target="_blank" href="https://www.youtube.com/channel/UCLhxza72203zpdSIySPLOuQ">
+                  <span class="fa-stack fa-lg">
+                    <i class="fab fa-youtube-square" style="font-size: 50px;"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a target="_blank" href="https://www.linkedin.com/company/amviestruc">
+                  <span class="fa-stack fa-lg">
+                    <i class="fab fa-linkedin" style="font-size: 50px;"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <br>
+            <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          </div>
         </div>
       </div>
-    </div>
   </footer>
-
   <!-- Bootstrap core JavaScript -->
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
