Se cambia imagen de fondo del header de la subpágina experiencia 3

--- a/experiencias/experiencia-3.html
+++ b/experiencias/experiencia-3.html
@@ -87,7 +87,7 @@
 </nav>
 
 <!-- Page Header -->
-<header class="masthead" style="background-image: url('../img/exp/Reficar 3.png')">
+<header class="masthead" style="background-image: url('../img/exp/casa-vacacional-2.jpg')">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
