Integración de imagenes

--- a/destacados/index.html
+++ b/destacados/index.html
@@ -108,14 +108,14 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 mx-auto">
       <div>
-          <img src="../img/dest/modmovsal.JPG" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="..."> 
+          <img src="../img/dest/modmovsal.JPG" width="300" style="float: left; padding-bottom: 20px;padding-right: 20px;" alt="hospitales portatiles"> 
           <h5 class="mt-0 mb-1">Módulo móvil de salud</h5>
             <p style="text-align: justify;"> Nuestro <b>módulo móvil de salud</b> aporta soluciones temporales o permanentes a hospitales, centros de salud y centros de atención complementarios, ofreciendo edificaciones transportables, especializadas, de rápida construcción,asépticas y resistentes al uso de productos altamente agresivos sin deteriorar su acabado.<img src="../img/dest/modulo-movil-salud.jpg" width="300" style="float: right; padding-bottom: 0px;padding-right: 0px;padding-top: 20px;padding-left: 20px;" alt="..."> <b>módulo móvil de salud</b> proporciona respuestas rápidas y eficaces para resolver cualquier déficit de servicio de salud en el lugar deseado con estándares muy altos de <b>confort y limpieza.</b> 
             </p> 
       </div>    
         <br><hr><br>
       <div>
-          <img src="../img/dest/casintsoc.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="...">     
+          <img src="../img/dest/casintsoc.jpg" width="300" style="float: right; padding-bottom: 20px;padding-right: 0px;padding-left: 20px;" alt="campamentos-pvc">     
             <h5 class="mt-0 mb-1">Casa base</h5>
               <p style="text-align: justify;"> Queremos presentar a nuestros Clientes nuestra <b>casa básica</b> para vivienda rural o urbana, cuya versatilidad permite que sea implementada en proyectos individuales o urbanizados. Nos hemos<img src="../img/dest/casa-lilusa-1.jpg" width="300" style="float: left; padding-right: 20px;padding-bottom: 0px;padding-top: 20px;" alt="..."> preocupado por enlazar el diseño, la economía y el confort para generar áreas amplias que aseguren las necesidades de habitabilidad en un ambiente basado en la sencillez.  
               </p>    
