--- a/index.html
+++ b/index.html
@@ -235,31 +235,31 @@
 
               </div>
               <div class="product" id="product_1">
-                  <img src="img/Inicio/cliente/dehotel.png" width="195" height="100" />
+                  <img src="img/Inicio/cliente/dehotel.png" width="195" height="100" alt="hotel"/>
                   <h5>Construcción</h5>
               </div>
               <div class="product" id="product_2">
-                <img src="img/Inicio/cliente/oceanos.png" width="195" height="100" />
+                <img src="img/Inicio/cliente/oceanos.png" width="195" height="100" alt="oceanos"/>
                 <h5>Alimentos</h5>
               </div>
               <div class="product" id="product_3">
-                  <img src="img/Inicio/cliente/etec.png" width="195" height="100" />
+                  <img src="img/Inicio/cliente/etec.png" width="195" height="100" alt="etec" />
                   <h5>Fabricantes</h5>
               </div>
               <div class="product" id="product_4">
-                  <img src="img/Inicio/cliente/fundacionmariosantodomingo.png" width="195" height="100" />
+                  <img src="img/Inicio/cliente/fundacionmariosantodomingo.png" width="195" height="100" alt="funcacion" />
                   <h5>Fundación</h5>
               </div>
               <div class="product" id="product_5">
-                  <img src="img/Inicio/cliente/oxy.png" width="195" height="100" />
+                  <img src="img/Inicio/cliente/oxy.png" width="195" height="100" alt="oxy"/>
                   <h5>Petrolera</h5>
               </div>
               <div class="product" id="product_6">
-                <img src="img/Inicio/cliente/reficar.png" width="195" height="100" />
+                <img src="img/Inicio/cliente/reficar.png" width="195" height="100" alt="reficar" />
                 <h5>Refinería</h5>
               </div>
               <div class="product" id="product_7">
-                <img src="img/Inicio/cliente/tenaristubocaribe.jpg" width="195" height="100" />
+                <img src="img/Inicio/cliente/tenaristubocaribe.jpg" width="195" height="100" alt="tenaristubocaribe"/>
                 <h5>Industria</h5>
               </div>
 
