inclusión de alt en imagenes

--- a/experiencias/experiencia-2.html
+++ b/experiencias/experiencia-2.html
@@ -126,21 +126,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/exp/REFICAR 2.jpg" class="d-block w-100" alt="...">
+              <img src="../img/exp/REFICAR 2.jpg" class="d-block w-100" alt="oficinas-prefabricadas">
                 <div class="carousel-caption d-none d-md-block" >
                   <h5>First slide label</h5>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/exp/IMG-20170509-WA0003.jpg" class="d-block w-100" alt="...">
+              <img src="../img/exp/IMG-20170509-WA0003.jpg" class="d-block w-100" alt="campamentos-pvc">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/exp/galeria001- campamentos009.jpg" class="d-block w-100" alt="...">
+              <img src="../img/exp/galeria001- campamentos009.jpg" class="d-block w-100" alt="campamentos-prefabricados">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
