--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -112,7 +112,7 @@
       <div class="col-lg-8 col-md-10 mx-auto centrar">
       <div class="cards-experiencias">
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <img src="../img/exp/campamentos-pvc.jpg" class="card-img-top" alt="...">
+            <img src="../img/exp/campamentos-pvc.jpg" class="card-img-top" alt="campamentos-pvc">
             <div class="card-body">
               <h5 class="card-title">Construcción Módulo de oficinas Fase III área 550m2 en 26 días</h5>
               <p class="card-text">Amviestruc había logrado posicionarse dentro de las empresas seleccionadas para participar en la construcción de las facilidades de uno de los más...</p>
@@ -120,7 +120,7 @@
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="...">
+            <img src="../img/exp/Reficar 3.png" class="card-img-top" alt="oficinas-pvc">
             <div class="card-body">
               <h5 class="card-title">Cerramiento arquitectónico con vista al Mar Caribe</h5>
               <p class="card-text">“No quiero perder esa hermosa vista al mar…”, fue lo que nos pidió nuestro Cliente, ubicado en el hermoso Corregimiento de Punta Canoa al norte de la histórica...</p>
@@ -128,7 +128,7 @@
             </div>
           </div>
           <div class="card" style="width: 20rem; margin-bottom: 40px;">
-            <a href="#"><img src="../img/exp/casa-vacacional-2.jpg" class="card-img-top" alt="..."></a>
+            <a href="#"><img src="../img/exp/casa-vacacional-2.jpg" class="card-img-top" alt="casas-prefebricadas"></a>
             <div class="card-body">
               <h5 class="card-title">Casa de Playa en La Boquilla - Cartagena de Indias D.T.</h5>
               <p class="card-text">La construcción de una casa comienza antes de iniciar la obra. Lo que se decida hacer previamente, influirá en cómo ocurrirá todo. Puede quedarse...</p>
