--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
                 </div>
               </div>
               <div class="carousel-item" style="max-height: 600px;">
-                <img src="img/Inicio/consultorios-pvc.jpg" class="d-block w-100" alt="consultorios-asepticos">                <img src="img/Inicio/consultorios-pvc.jpg" class="d-block w-100" alt="...">
+                <img src="img/Inicio/consultorios-pvc.jpg" class="d-block w-100" alt="consultorios-asepticos">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="letrasInicio">La asepcia es </h5>
                   <p class="letrasInicio">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                 </div>
               </div> 
               <div class="carousel-item" style="max-height: 600px;">
-                <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="cerramientos seguros">               <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="...">
+                <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="cerramientos seguros">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="letrasInicio">Armonizar con el ambiente</h5>
                   <p>Nuestros diseños buscan cumplir con las espectativas del cliente</p>
@@ -185,8 +185,8 @@
          
               <div id="content" class="col-lg-12">
                 <div id="carrusel">
-                  <a href="#" class="left-arrow"><img src="img/Inicio/cliente/left-arrow.png" /></a>
-                  <a href="#" class="right-arrow"><img src="img/Inicio/cliente/right-arrow.png" /></a>
+                  <a href="#" class="left-arrow"><img src="img/Inicio/cliente/left-arrow.png" />fecha</a>
+                  <a href="#" class="right-arrow"><img src="img/Inicio/cliente/right-arrow.png" />fecha</a>
                   <div class="carrusel">
                     <div class="product" id="product_0">
                       <img src="img/Inicio/cliente/puerto-bahia.png" width="195" height="100" alt="puerto bahia"/>
