--- a/sectores/minerita-petroleo/index.html
+++ b/sectores/minerita-petroleo/index.html
@@ -112,61 +112,61 @@
               <tr>
                 <td>
                   Durabilidad y resistencia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115" alt="durabilidad">
                 </td>
                 <td>
                   Excelente acabado. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115"> 
+                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente-acabado"> 
                 </td>
               </tr>
               <tr>
                 <td>
                   Aislante térmico y acústico. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115"  alt="aislante-termico-acustico">
                 </td>
                 <td>
                   Rapidez de construcción. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115"  alt="construccion">
                 </td>
               </tr>
               <tr>
                 <td>
                   Bajo costo de mantenimiento.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"  alt="bajo-mantenimiento">
                 </td>
                 <td>
                   Construcción limpia. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/mop.svg" width="115" height="115"  alt="construcción">
                 </td>
               </tr>
               <tr>
                 <td>
                   Desmontable - reutilizable. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/recycle.svg" width="115" height="115"  alt="portatil">
                 </td>
                 <td>
                   No requiere acabados. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/cube.svg" width="115" height="115"  alt="excelentes-acabados">
                 </td>
               </tr>
               <tr>
                 <td>
                   Ignífugo y autoextinguidle. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115"  alt="ignifugo-autoextinguible">
                 </td>
                 <td>
                   Liviano y transportable.
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/feather.svg" width="115" height="115"  alt="liviano">
                 </td>
               </tr>
               <tr>
                 <td>
                   Norma Sismo-resistente. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115"  alt="Sismo-resistente">
                 </td>
                 <td>
                   Código Sanitario. <br>
-                  <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                  <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo-sanitario">
                 </td>
               </tr>
             </table>  
