etiquetas de imagenes

--- a/sectores/plantaciones-ganaderia/index.html
+++ b/sectores/plantaciones-ganaderia/index.html
@@ -123,56 +123,56 @@
                 <tr>
                   <td>
                     Ambiente de cultivo optimizado (Temperatura y Humedad). <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/crop.svg" width="115" height="115" alt="temperatura">
                   </td>
                   <td>
                     Superficie Resistente al Moho.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115"> 
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115" alt="humedad"> 
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Excelentes propiedades térmicas y reflectividad lumínica. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/thermometer.svg" width="115" height="115" alt="propiedades-termicas">
                   </td>
                   <td>
                     Durabilidad y resistencia. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/durable-fabric.svg" width="115" height="115" alt="durabilidad-resistencia">
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Aislante acústico. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislante-termico">
                   </td>
                   <td>
                     Excelente acabado. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115" alt="excelente-acabado">
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Rapidez de construcción. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115" alt="rapidez-construccion">
                   </td>
                   <td>
                     Bajo costo de mantenimiento.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115" alt="bajo mantenimiento">
                   </td>
                 </tr>
                 <tr>
                   <td>
                     Ignífugo y autoextinguidle. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115" alt="ignifico-autoextinguible">
                   </td>
                   <td>
                     Norma Sismo-resistente.
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115" alt="sismo-resistentes">
                   </td>
                 </tr>
                 <th colspan="2">
                     Código Sanitario. <br>
-                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                    <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115"  alt="codigo-sanitario">
                 </th> 
              </table> 
   
