--- a/soluciones/cubierta-cerramiento/index.html
+++ b/soluciones/cubierta-cerramiento/index.html
@@ -117,10 +117,7 @@
             expansivo de alta densidad con cara externa e interna en PVC o metálica.
           </p>
           <div>
-            <img src="../../img/sol//cubiertas-4.jpg"
-            
-            class="responsivo1" 
-            alt="Estructuras metálicas una rapida solución">
+            <img src="../../img/sol//cubiertas-4.jpg" class="responsivo1" alt="Estructuras metálicas una rapida solución">
           </div>
           <p>
             <h3><strong>Cubiertas sin traslapos transversales:</strong></h3> Para los proyectos con cubiertas de luces extensas y cerramientos de gran altura, nuestros Clientes podrán 
