--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -130,61 +130,61 @@
             <tr>
               <td>
                  Altamente Aséptico. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/no-virus.svg" width="115" height="115"  alt="aseptico">
               </td>
               <td>
                 Resistente a productos químicos altamente agresivos y corrosivos. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="115" height="115"> 
+                <img class="imagen-responsiva"  src="../../img/sec/ico/lab.svg" width="115" height="115" alt="resistente-corrosión"> 
               </td>
             </tr>
             <tr>
               <td>
                 Espacios libres de humedad.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/humidity.svg" width="115" height="115" alt="humedad">
               </td>
               <td>
                 Superficies fáciles de limpiar y desinfectar.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/wipe.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/wipe.svg" width="115" height="115" alt="limpieza">
               </td>
             </tr>
             <tr>
               <td>
                 Espacios y habitaciones confortables. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/bed.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/bed.svg" width="115" height="115" alt="confort">
               </td>
               <td>
                 Aislante térmico y acústico. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/no-music.svg" width="115" height="115" alt="aislante termico">
               </td>
             </tr>
             <tr>
               <td>
                 Excelente acabado.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/facade.svg" width="115" height="115"  alt="excelente acabado">
               </td>
               <td>
                 Rapidez de construcción. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/sketch.svg" width="115" height="115" alt="rapidez construcción">
               </td>
             </tr>
             <tr>
               <td>
                 Bajo costo de mantenimiento.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/affordable.svg" width="115" height="115"  alt="bajo costo">
               </td>
               <td>
                 Ignífugo y autoextinguidle. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/no-fire.svg" width="115" height="115"  alt="ignifugo-autoextinguible">
               </td>
             </tr>
             <tr>
               <td>
                 Norma Sismo-resistente.
-                <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/cracked-ground-between-houses.svg" width="115" height="115" alt="sismo-resistente">
               </td>
               <td>
                 Código Sanitario. <br>
-                <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115">
+                <img class="imagen-responsiva"  src="../../img/sec/ico/verify.svg" width="115" height="115" alt="codigo-sanitario">
               </td>
             </tr>
         </table> 
