inclusión de los iconos en la cabecera

--- a/experiencias/experiencia-2.html
+++ b/experiencias/experiencia-2.html
@@ -31,6 +31,8 @@
   <!--Se incluye css para experiencias-->
   <link rel="stylesheet" type="text/css" href="estilo.css">
   <!--Se incluye css para experiencias-->
+    <!-- icono para la pagina -->
+    <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
 </head>
 
 <body>
