--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -20,7 +20,8 @@
 
   <!-- Custom styles for this template -->
   <link href="../../css/clean-blog.css" rel="stylesheet">
-
+  <!-- icono para la pagina -->
+  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
 <style>
   .imagen-responsiva{
     display:inline-flex;
