detalles de ortografia

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link href="css/clean-blog.css" rel="stylesheet">
 
   <!-- icono para la pagina -->
-  <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+  <link rel="icon" type="image/png" href="img/logo AMVIESTRUC SAS.png">
 
 </head>
 
@@ -60,8 +60,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
               <div class="dropdown-menu">          
-                <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructurqas Metálicas</a>
-                <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+                <a class="dropdown-item" href="soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
+                <a class="dropdown-item" href="soluciones/disenos-estructurales/index.html">Diseño y Consultorìa</a>  
                 <a class="dropdown-item" href="soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
               </div>
             </li>
@@ -93,29 +93,29 @@
               <div class="carousel-item active" style="max-height: 600px;">
                 <img src="img/Inicio/campamentos-pvc.jpg" class="d-block w-100" alt="campamentos prefabricados">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="letrasInicio">Confort para el trabajo</h5>
-                  <p class="letrasInicio">El control del ambiente, los servicios y la seguridad son aspectos crusiales en las oficinas portátiles</p>
+                  <h3 class="letrasInicio">Construcciones prefabricadas</h3>
+                  <p class="letrasInicio">Ahorre tiempo en el proyecto, disimuya riesgos en la obra, optimice sus recuros...</p>
                 </div>
               </div>
               <div class="carousel-item" style="max-height: 600px;">
                 <img src="img/Inicio/vivienda-pvc-2.jpg" class="d-block w-100" alt="viviendas prefabricadas">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="letrasInicio">Second slide label</h5>
-                  <p class="letrasInicio">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <h3 class="letrasInicio">Casas con panales de PVC</h3>
+                  <p class="letrasInicio">Ambientes con gran confort, construcciones limpias y resistentes...</p>
                 </div>
               </div>
               <div class="carousel-item" style="max-height: 600px;">
                 <img src="img/Inicio/consultorios-pvc.jpg" class="d-block w-100" alt="consultorios-asepticos">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="letrasInicio">La asepcia es </h5>
-                  <p class="letrasInicio">Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                  <h3 class="letrasInicio">Laboratorios y hospitales prefabricados</h3>
+                  <p class="letrasInicio">Asépticos y de fácil higiene, cumpliendo normativa...</p>
                 </div>
               </div> 
               <div class="carousel-item" style="max-height: 600px;">
                 <img src="img/Inicio/cerramientos.jpg" class="d-block w-100" alt="cerramientos seguros">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5 class="letrasInicio">Armonizar con el ambiente</h5>
-                  <p>Nuestros diseños buscan cumplir con las espectativas del cliente</p>
+                  <h3 class="letrasInicio">Armonizar con el ambiente</h3>
+                  <p class="letrasInicio">Nuestros diseños buscan cumplir con las espectativas del cliente...</p>
                 </div>
               </div>
             </div>
@@ -154,27 +154,29 @@
             <h2>Nuestro alcance</h2>
           </div>
           <div class="card-deck">
+
+            <div class="card">
+              <img src="img/Inicio/estructura-metalica.JPG" class="card-img-top" alt="estructura-metalica">
+              <div class="card-body">
+                <h5 class="card-title">Estructuras Metálicas</h5>
+                <p class="card-text">Generamos soluciones constructivas, encontrando formas innovadoras y creativas para entregar a nuestros clientes estructuras metálicas resistentes y durables.</p>
+              </div>
+            </div>
             <div class="card">
               <img src="img/sec/salud-pvc.jpeg" class="card-img-top" alt="hospitales prefabricados"> 
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Construcciones en PVC</h5>
+                <p class="card-text">Diseñamos y construimos edificaciones prefabricadas con paneles en PVC, resistentes, durables, creadoras de confort</p>
               </div>
             </div>
             <div class="card">
               <img src="img/Inicio/bodega.JPG" class="card-img-top" alt="bodegas pvc">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Cubiertas y Cerramientos para Bodegas</h5>
+                <p class="card-text">Con nuestra experiencia en el uso de paneles en PVC le ayudamos a implementar cerramientos en PVC con propiedades: termoacústicas, resistentes al medio abiente, ignifugo, sismo resistente</p>
               </div>
             </div>
-            <div class="card">
-              <img src="img/Inicio/estructura-metalica.JPG" class="card-img-top" alt="estructura-metalica">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-              </div>
-            </div>
+
           </div>
         </div>
           <br><hr><br>
