--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -57,12 +57,12 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sectores</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="index.html">salud</a>
+                <a class="dropdown-item" href="index.html">Salud</a>
                 <a class="dropdown-item" href="../alimentos-bebidas/index.html">Alimentos y bebidas</a>
-                <a class="dropdown-item" href="../farmaceutico/index.html">Farmaceutico</a>               
-                <a class="dropdown-item" href="../construccion/index.html">Construccion</a>
-                <a class="dropdown-item" href="../minerita-petroleo/index.html">Mineria y petroleo</a>
-                <a class="dropdown-item" href="../plantaciones-ganaderia/index.html">Plantaciones y ganaderia</a>
+                <a class="dropdown-item" href="../farmaceutico/index.html">Farmaceútico</a>               
+                <a class="dropdown-item" href="../construccion/index.html">Construcción</a>
+                <a class="dropdown-item" href="../minerita-petroleo/index.html">Minería y petróleo</a>
+                <a class="dropdown-item" href="../plantaciones-ganaderia/index.html">Plantaciones y ganadería</a>
               </div>
             
               <!-- ---------------------------------------------- -->
@@ -70,7 +70,7 @@
                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
                   <div class="dropdown-menu">
                     <a class="dropdown-item" href="../../soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
-                    <a class="dropdown-item" href="../../soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+                    <a class="dropdown-item" href="../../soluciones/disenos-estructurales/index.html">Diseño y Consultoría</a>  
                     <a class="dropdown-item" href="../../soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
                   </div>
                 </li>
