inclusión de meta

--- a/sectores/salud/index.html
+++ b/sectores/salud/index.html
@@ -30,6 +30,11 @@
     
   }
 </style>
+  <!-- uso de las metas -->
+  <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
 
 </head>
 
