--- a/soluciones/index.html
+++ b/soluciones/index.html
@@ -22,6 +22,11 @@
   <link href="../css/clean-blog.css" rel="stylesheet">
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+    <!-- uso de las metas -->
+    <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
 </head>
 
 <body>
