--- a/experiencias/experiencia-1.html
+++ b/experiencias/experiencia-1.html
@@ -33,6 +33,10 @@
   <!--Se incluye css para experiencias-->
   <!-- icono para la pagina -->
   <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+  <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
 
 </head>
 
@@ -58,12 +62,12 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Sectores</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="../sectores/salud/index.html">salud</a>
+              <a class="dropdown-item" href="../sectores/salud/index.html">Salud</a>
               <a class="dropdown-item" href="../sectores/alimentos-bebidas/index.html">Alimentos y bebidas</a>
-              <a class="dropdown-item" href="../sectores/farmaceutico/index.html">Farmaceutico</a>               
-              <a class="dropdown-item" href="../sectores/construccion/index.html">Construccion</a>
-              <a class="dropdown-item" href="../sectores/minerita-petroleo/index.html">Mineria y petroleo</a>
-              <a class="dropdown-item" href="../sectores/plantaciones-ganaderia/index.html">Plantaciones y ganaderia</a>
+              <a class="dropdown-item" href="../sectores/farmaceutico/index.html">Farmaceútico</a>               
+              <a class="dropdown-item" href="../sectores/construccion/index.html">Construcción</a>
+              <a class="dropdown-item" href="../sectores/minerita-petroleo/index.html">Minería y petróleo</a>
+              <a class="dropdown-item" href="../sectores/plantaciones-ganaderia/index.html">Plantaciones y ganadería</a>
             </div>
           </li>
         <!-- ---------------------------------------------- -->
@@ -71,7 +75,7 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">soluciones</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="../soluciones/estructura-metalicas/index.html">Estructuras Metálicas</a>
-            <a class="dropdown-item" href="../soluciones/disenos-estructurales/index.html">Diseño y Consultoria</a>  
+            <a class="dropdown-item" href="../soluciones/disenos-estructurales/index.html">Diseño y Consultoría</a>  
             <a class="dropdown-item" href="../soluciones/cubierta-cerramiento/index.html">Cubiertas y Cerramientos</a>
           </div>
         </li>
