--- a/experiencias/index.html
+++ b/experiencias/index.html
@@ -33,6 +33,10 @@
   <!--Se incluye css para experiencias-->
     <!-- icono para la pagina -->
     <link rel="icon" type="image/png" href="../img/logo AMVIESTRUC SAS.png">
+    <meta name="description" content="Combinación eficiente de técnicas y materiales de construcción, reduciendo el tiempo de implementación, manteniendo la confiabilidad de la estructura">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="keywords" content="edificaciones, prefabricadas, casas, hospitales" />
 </head>
 
 <body>
